--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,10 @@ body{
     flex-direction: column;
     width: 100%;
     height: 100vh;
+    text-align: center;
 }
 .coming img{
-    width: 380px;
+    width: 320px;
 }
 
 h1{font-size: 48px;
