--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,26 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #267387; 
+    --secondary-color: #B69D79;
+    --accent-color:#07565C; 
+    --text-color: rgb(243, 243, 243);
+}
+
+.jura-font {
+    font-family: "Jura", serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style:normal;
+  }
 body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #fffbf5;
+    background-color: #F7F7F7;
+    /* background: linear-gradient(135deg, #F3F3F3 0%, #E0E0E0 100%); */
+    font-family:  'Nunito', Arial, sans-serif;
 }
 .coming{
     display: flex;
@@ -23,13 +38,606 @@ body{
     width: 320px;
 }
 
-h1{font-size: 48px;
-    color: #B69D79;
+h1{font-size: 72px;}
+h2{font-size: 48px;}
+h3{font-size: 36px;}
 
+/* NAVIGATION */
+
+header {
+    /* background: linear-gradient(135deg, #F4EDE4 0%, #EAD7C2 40%, #D4B996 100%); */
+    background-color: #F3F3F3;
+    background: linear-gradient(135deg, #d6d4cf 0%, #F3F3F3 50%, #E0E0E0 100%);
+
+    /* background: linear-gradient(135deg, #f3f3f3 0%, #F3F3F3 50%, #F3F3F3 100%); */
+    /* background: linear-gradient(135deg, var(--primary-color) 0%, var(--accent-color) 40%, var(--primary-color) 100%); */
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.7), inset 0 -1px 1px rgba(255, 255, 255, 0.1);
+    border-bottom: 3px solid var(--primary-color);
+    /* color: var(--secondary-color); */
+    backdrop-filter: blur(8px);
+    transition: all 0.4s ease;
+    overflow: hidden;
+    width: 100%;
+    z-index: 1000;
+    font-family: 'Jura';
+    padding: 1rem 0;
 }
-h2{
-    font-size: 36px;
-    margin-bottom: 2rem;
-    color: #15697F;
 
+  header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0) 70%);
+    opacity: 0.2;
+    transform: rotate(25deg);
+    transition: all 0.7s ease;
+  }
+  
+  header:hover::before {
+    transform: rotate(-25deg);
+    opacity: 0.3;
+  }
+  
+  header:hover {
+    /* background: linear-gradient(135deg, #1e2a47 0%, #0c1424 60%, #19263d 100%); */
+    background: linear-gradient(135deg, var(--primary-color) 0%, #0c1424 60%, var(--primary-color) 100%);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.9), inset 0 -2px 2px rgba(255, 255, 255, 0.2);
+}
+nav {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.logo {
+    width: 70px;
+    height: auto;
+}
+
+
+nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+nav ul li {
+    margin-left: 2rem;
+}
+
+nav ul li a {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 0.5rem 1rem;
+    transition: all 0.3s ease;
+    border-radius: 4px;
+    position: relative;
+}
+nav ul li a::before{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: 0;
+    left: 10px;
+    background-color: transparent;
+    transition: width 0.5s ease;
+}
+
+nav ul li a:hover::before {
+    background-color: var(--secondary-color); 
+    width: calc(100% - 20px); 
+}
+
+.nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .nav-toggle-label {
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: 1rem;
+        transform: translateY(-50%);
+        cursor: pointer;
+    }
+
+    .nav-toggle-label span,
+    .nav-toggle-label span::before,
+    .nav-toggle-label span::after {
+        display: block;
+        background: var(--secondary-color);
+        height: 4px;
+        width: 2.4rem;
+        border-radius: 2px;
+        position: relative;
+        transition: all 0.3s ease;
+    }
+
+    .nav-toggle-label span::before,
+    .nav-toggle-label span::after {
+        content: '';
+        position: absolute;
+    }
+    
+    .nav-toggle-label span::before {
+        bottom: 10px;
+    }
+
+    .nav-toggle-label span::after {
+        top: 10px;
+    }
+
+    nav ul {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: var(--primary-color);
+        display: none;
+        flex-direction: column;
+        padding: 1rem 0;
+        text-align: center;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    nav ul li {
+        margin: 0.5rem 0;
+    }
+
+    .nav-toggle:checked ~ ul {
+        display: flex;
+    }
+
+    .nav-toggle:checked ~ .nav-toggle-label span {
+        background: transparent;
+    }
+
+    .nav-toggle:checked ~ .nav-toggle-label span::before {
+        transform: rotate(45deg);
+        top: 0;
+    }
+
+    .nav-toggle:checked ~ .nav-toggle-label span::after {
+        transform: rotate(-45deg);
+        top: 0;
+    }
+    h2{
+        font-size: 1.5rem;
+    }
+}
+
+
+/* HERO SECTION */
+.hero{
+    font-family: 'Jura', serif;
+    width: 100%;
+    /* max-width: 1200px; */
+    margin: 0 auto;
+    height: 90vh;
+    background-size: cover;
+    background-position: top;
+    transition: background-image ease-in 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* padding-top: 3rem; */
+    text-align: center;
+    transition: background-image 0.5s ease-in-out;
+}
+
+.hero-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    /* border-radius: 16px; */
+    width: 100%;
+    /* height: 100%; */
+    gap: 2rem;
+    /* backdrop-filter: blur(8px); */
+    padding: 3rem;
+}
+.button-container{
+    margin-top: 2rem;
+    display: flex;
+    gap: 2rem;
+}
+.hero-btn{
+    transition: background-color ease-in 0.3s;
+    cursor: pointer;
+    width: 180px;
+    padding:  0.5rem;
+    background-color: var(--primary-color);
+    border-radius: 8px;
+    border: none;
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+.hero-btn:hover{
+    background-color:#4e4334;
+}
+@media (max-width:768px) {
+    .hero{
+        background-position: 60% ; 
+        background-size: auto;
+    }
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.overlay h3 {
+    color: white;
+    font-size: 2.2rem;
+    font-weight: bold;
+    text-align: center;
+}
+.thumbnails {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 2rem;
+}
+.thumbnails img {
+    width: 160px;
+    height: 100px;
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: border 0.3s;
+    opacity: 0.5;
+}
+.thumbnails img:hover, .thumbnails img.active {
+    border: 2px solid white;
+    opacity: 1;
+}
+
+/* PROJECTS */
+
+.title-container{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 3rem;
+    justify-content: space-between;
+}
+.our-work {
+    text-align: start;
+    padding: 80px 50px;
+    max-width: 1200px;
+    background-color: #F7F7F7;
+    /* background: linear-gradient(135deg, #F3F3F3 0%, #E0E0E0 100%); */
+}
+
+.our-work h2 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #333;
+}
+.our-work h4{
+    cursor: pointer;
+}
+.our-work h4:hover{
+    color: #07565C;
+}
+.projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    max-width: 1200px;
+    height: 500px;
+    margin: 0 auto;
+}
+
+.project {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+    height: 400px;
+    cursor: pointer;
+}
+
+.project img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position:center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.project:hover img {
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+.project-info {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 15px;
+    text-align: center;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.project:hover .project-info {
+    transform: translateY(0);
+}
+
+.project-info h3 {
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+}
+
+.project-info p {
+    font-size: 1rem;
+    margin: 0;
+}
+.state{
+    position: absolute;
+    z-index: 99999;
+    color: white;
+    top: -3rem;
+    right: 1rem;
+    background-color: var(--primary-color);
+    padding: 4px 16px;
+    border-radius: 4px;
+}
+.sale{
+    background-color: var(--secondary-color);
+}
+.project-details {
+    text-align: start;
+    padding: 10px;
+    color: #333;
+    font-size: 1rem;
+    border-top: 1px solid #ddd;
+}
+
+.project-details p {
+    margin: 5px 0;
+    font-size: 1rem;
+}
+
+.project-details strong {
+    color: #267387; 
+}
+.line{
+    width: 100%;
+    height: 1rem;
+    background-color: var(--primary-color);
+}
+footer{
+    background-color: #F3F3F3;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer-container{
+    display: flex;
+    align-items: start;
+    padding: 4rem;
+    gap: 2rem;
+    color:#267387;
+    width: 100%;
+    max-width: 1200px;
+    justify-content: space-between;
+}
+footer img{
+    height: 180px;
+}
+
+footer p{
+    font-size: 1.4rem;
+}
+footer hr{
+    margin-bottom: 1rem;
+    border-top: 1px solid var(--secondary-color);
+}
+footer ul a{
+    text-decoration: none;
+    color: var(--secondary-color);
+}
+footer ul a:hover{
+    color: #a48869;
+}
+.footer-nav ul{
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
+.footer-copy{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.2rem;
+    color: var(--text-color);
+    background-color: var(--primary-color);
+}
+.footer-copy a{
+    color: #dfc096;
+    text-decoration: none;
+}
+.footer-copy a:hover{
+    color: #B69D79;
+}
+/* CONTACT */
+.contact-section {
+    /* background: linear-gradient(135deg, #F3F3F3, #EDEDED); */
+    padding: 80px 50px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    background-color: white;
+}
+
+.contact-container {
+    display: flex;
+    width: 100%;
+    max-width: 1200px;
+    background: white;
+    /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); */
+    /* border-radius: 12px; */
+    overflow: hidden;
+}
+
+/* Left Side: Contact Form */
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    padding: 50px;
+    background: #D3E2E6;
+    color: white;
+}
+
+.contact-form h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.contact-form p {
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+    opacity: 0.8;
+}
+::placeholder{
+    color: white;
+}
+.input-group {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.input-group input,
+.input-group textarea {
+    width: 100%;
+    padding: 12px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    color: white;
+    font-size: 1rem;
+    outline: none;
+    transition: border 0.3s ease-in-out;
+}
+
+/* .input-group label {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.6);
+    transition: 0.3s ease-in-out;
+} */
+
+.input-group input:focus + label,
+.input-group textarea:focus + label,
+.input-group input:not(:placeholder-shown) + label,
+.input-group textarea:not(:placeholder-shown) + label {
+    top: 5px;
+    font-size: 0.9rem;
+    color: white;
+}
+
+.contact-form button {
+    width: 100%;
+    padding: 12px;
+    background: #B69D79;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+}
+
+.contact-form button:hover {
+    background: #a48869;
+}
+
+/* Right Side: Contact Info */
+.contact-info {
+    flex: 1;
+    padding: 50px;
+    background: white;
+    color: #333;
+    text-align: left;
+}
+
+.contact-info h3 {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    color: #267387;
+}
+
+.contact-info p {
+    font-size: 1.1rem;
+    margin-bottom: 10px;
+}
+
+.map {
+    margin-top: 20px;
+}
+
+.map iframe {
+    width: 100%;
+    height: 200px;
+    border: none;
+    border-radius: 5px;
+}
+
+/* Responsive */
+@media (max-width: 900px) {
+    .contact-container {
+        flex-direction: column;
+    }
+    
+    .contact-form,
+    .contact-info {
+        padding: 30px;
+    }
 }
