--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,14 @@ h2{font-size: 48px;}
 h3{font-size: 36px;}
 
 /* NAVIGATION */
+
+
 .logo {
     width: 70px;
     height: auto;
-    transition: width 0.5s ease-in-out;
+    transition: width 0.5s ease-out;
 }
+
 header {
     /* background: linear-gradient(135deg, #F4EDE4 0%, #EAD7C2 40%, #D4B996 100%); */
     background-color: #F3F3F3;
@@ -74,14 +77,13 @@ header {
   }
   
   header:hover {
-    /* background: linear-gradient(135deg, #1e2a47 0%, #0c1424 60%, #19263d 100%); */
     /* background: linear-gradient(135deg, var(--primary-color) 0%, #0c1424 60%, var(--primary-color) 100%); */
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.9), inset 0 -2px 2px rgba(255, 255, 255, 0.2);
-    padding: 2rem 0;
+    /* padding: 2rem 0; */
 }
 header:hover .logo{
-    width: 100px;
-    transition: width 0.5s ease-in-out;
+    width: 110px;
+    transition: width 0.5s ease-in;
 }
 nav {
     max-width: 1200px;
@@ -97,6 +99,7 @@ nav {
 
 
 nav ul {
+
     display: flex;
     list-style: none;
     margin: 0;
@@ -144,8 +147,115 @@ nav ul li a:hover::before {
 .nav-toggle-label {
     display: none;
 }
+.logo-link-mobile{
+    display: none;
+}
+.burger-menu{
+    display: none;
+}
+
+@media (max-width:768px) {
+    /* NAVIGATION */
+    .header{
+        padding-bottom: 1rem;
+        display: flex;
+        justify-content: space-around;
+         align-items: center;
+        width: 100%;
+    }
+    header {
+        border-bottom: 0px solid var(--primary-color);
+        overflow: hidden; /* Prevents content shifting */
+        height: 120px;
+     }
+     header:hover .logo{
+         width: 90px;
+         transition: width 0.5s ease-in;
+     }
+    
+    .logo {
+        width: 90px;
+        height: auto;
+        transition: width 0.5s ease-out;
+    }
+    .logo-link-mobile{
+        display: block;
+    }
+    nav {
+        position: absolute;
+        top: 0;
+        right: -100%;
+        width: 350px;
+        height: 100vh;
+        align-items: start;
+        box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+        transition: right 0.3s ease-in-out;
+        z-index: 9998;
+        background-color: #032c2c;
+    }
+    nav ul{
+        display: flex;
+        flex-direction: column;
+        height: 500px;
+    }
+    .nav-mobile{
+        display: none;
+    }
 
 
+    .burger-menu {
+        display: block;
+        position: relative;
+        font-size: 32px;
+        cursor: pointer;
+        color: #3A9B88;
+        z-index: 9999; /* Higher than nav */
+    }
+
+    .burger-menu.open {
+        font-size: 32px;
+        transition: all ease 0.7s;
+        color: white;
+        position: absolute;
+        top: 20px;
+        right: 30px;
+    }
+    .close-menu {
+        font-size: 30px;
+        cursor: pointer;
+        align-self: flex-end;
+    }
+    nav.active {
+        right: 0;
+        height: 100vh; /* Make sure nav fills the screen */
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+    }
+    nav.active ul{
+        gap: 2rem;
+        justify-content: start;
+        align-items: start;
+    }
+    nav.active ul li:nth-child(3){
+        order: 5;
+    }
+    nav.active .logo{
+        width: 140px;
+    }
+    nav.active a{
+        font-size: 2rem;
+        color: #B69D79;
+    }
+    header.active {
+        height: 100vh; /* Makes the header take full screen */
+    }
+    header.close{
+        height: 100px;
+    }
+    
+}
 /* HERO SECTION */
 .hero{
     font-family: 'Jura', serif;
@@ -199,12 +309,7 @@ nav ul li a:hover::before {
 .hero-btn:hover{
     background-color:#4e4334;
 }
-@media (max-width:768px) {
-    .hero{
-        background-position: 60% ; 
-        background-size: auto;
-    }
-}
+
 
 .overlay {
     position: absolute;
@@ -240,7 +345,24 @@ nav ul li a:hover::before {
     border: 2px solid white;
     opacity: 1;
 }
-
+@media (max-width:768px) {
+    .hero{
+        background-position: 60% ; 
+        background-size: auto;
+    }
+    .overlay{
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .thumbnails{
+        width: 100%;
+        overflow: scroll;
+        padding: 0 1rem;
+    }
+    .overlay h3{
+        font-size: 1.4rem;
+    }
+}
 /* PROJECTS */
 
 .title-container{
@@ -355,6 +477,14 @@ nav ul li a:hover::before {
 .project-details strong {
     color: #267387; 
 }
+
+@media (max-width: 768px) {
+    .projects {
+        grid-template-columns: repeat(1, 1fr); /* 1 column */
+        gap: 15px; /* Reduce gap for smaller screens */
+        height: auto;
+    }
+}
 .line{
     width: 100%;
     height: 1rem;
@@ -419,6 +549,24 @@ footer ul a:hover{
 }
 .footer-copy a:hover{
     color: #B69D79;
+}
+
+@media (max-width:768px) {
+   .footer-container{
+    flex-direction: column;
+    align-items: center;
+   }
+   .footer-container p{
+    font-size: 1rem;
+   }
+   .footer-copy{
+    padding: 1rem 0;
+    flex-direction: column;
+    height: 90px;
+   }
+   .footer-nav ul{
+    text-align: center;
+   }
 }
 /* CONTACT */
 .contact-section {
