--- a/contact.css
+++ b/contact.css
@@ -55,6 +55,8 @@ body{
 .contact-det-all{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 .contact-frame{
     padding: 1rem 2rem;
@@ -65,13 +67,16 @@ body{
     border-radius: 0.8rem;
     margin-bottom: 2rem;
     background-color: #E5E5E5;
+    padding-left: 1rem;
 }
 .contact-det img{
     width: 40px;
 }
 .contact-det-all{
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: start;
     gap: 3rem;
 }
 /* Contact Info Section */
@@ -177,3 +182,10 @@ footer{
     opacity: 0;
     transform: translateX(-100px); /* Initial hidden state */
   }
+
+  
+/* GLIFADA */
+
+.property-intro .container img{
+    width: 380px;
+}
