--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ nav ul li a:hover::before {
     }
     .logo-link-mobile{
         display: block;
+        z-index: 999;
     }
     nav {
         position: absolute;
@@ -263,7 +264,7 @@ nav ul li a:hover::before {
     /* max-width: 1200px; */
     margin: 0 auto;
     height: 90vh;
-    background-size: cover;
+    background-size:cover;
     background-position: top;
     transition: background-image ease-in 0.3s;
     display: flex;
@@ -275,41 +276,11 @@ nav ul li a:hover::before {
     transition: background-image 0.5s ease-in-out;
 }
 
-.hero-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: white;
-    /* border-radius: 16px; */
-    width: 100%;
-    /* height: 100%; */
-    gap: 2rem;
-    /* backdrop-filter: blur(8px); */
-    padding: 3rem;
-}
 .button-container{
     margin-top: 2rem;
     display: flex;
     gap: 2rem;
 }
-.hero-btn{
-    transition: background-color ease-in 0.3s;
-    cursor: pointer;
-    width: 180px;
-    padding:  0.5rem;
-    background-color: var(--primary-color);
-    border-radius: 8px;
-    border: none;
-    color: rgb(255, 255, 255);
-    font-size: 1.2rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-}
-.hero-btn:hover{
-    background-color:#4e4334;
-}
-
 
 .overlay {
     position: absolute;
@@ -327,7 +298,7 @@ nav ul li a:hover::before {
 }
 .thumbnails {
     position: absolute;
-    bottom: 20px;
+    bottom: 80px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -353,11 +324,14 @@ nav ul li a:hover::before {
     .overlay{
         flex-direction: column;
         gap: 2rem;
+        height: 106vh;
+        background-repeat: no-repeat;
     }
     .thumbnails{
         width: 100%;
         overflow: scroll;
         padding: 0 1rem;
+        bottom: 20px;
     }
     .overlay h3{
         font-size: 1.4rem;
@@ -409,7 +383,9 @@ nav ul li a:hover::before {
     height: 400px;
     cursor: pointer;
 }
-
+.projects a{
+    text-decoration: none;
+}
 .project img {
     width: 100%;
     height: 100%;
