--- a/project.css
+++ b/project.css
@@ -282,6 +282,7 @@ ul li {
     border-radius: 8px;
     transition: transform 0.3s ease-in-out;
     position: relative;
+    cursor: pointer;
 }
 
 /* Hover Effect */
