--- a/styles.css
+++ b/styles.css
@@ -332,7 +332,7 @@ nav ul li a:hover::before {
         flex-direction: column;
         justify-content: center;
         gap: 1rem;
-        height: 100vh;
+        height: 100%;
         background: rgba(0, 0, 0, 0.3);
     }
     .thumbnails{
