--- a/styles.css
+++ b/styles.css
@@ -336,6 +336,7 @@ nav ul li a:hover::before {
         gap: 1rem;
         height: 100%;
         background: rgba(0, 0, 0, 0.3);
+        padding-bottom: 6rem;
     }
     .thumbnails{
         width: 100%;
