--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,7 @@ nav ul li a:hover::before {
         justify-content: center;
         gap: 1rem;
         height: 100%;
-        background: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.3);
         padding-bottom: 6rem;
     }
     .thumbnails{
